# tools

./: .gitignore  CLAUDE.md  LICENSE  README.md  _common.py  audiopro_tools.py  bundle_tools.py  completions_tools.py  crypto_tools.py  data_tools.py  embedded_tools.py  finance_tools.py  forensic_tools.py  generate_build_guide_pdf.py  image_tools.py  install.ps1  install.sh  mcp_server.py  media_tools.py  pdf_tools.py  pyproject.toml  recipes_tools.py  requirements.txt  server.py  steg_tools.py  threed_tools.py  time_tools.py  tk.py  watch_tools.py
.github/workflows/: ci.yml  release.yml
docs/superpowers/plans/: 2026-05-22-tk-hardening.md
docs/superpowers/specs/: 2026-05-22-tk-hardening-design.md
extension/: README.md  background.js  manifest.json  popup.html  popup.js
tests/: conftest.py  test_api.py  test_catalog.py  test_fuzz.py  test_golden.py  test_smoke.py  test_validation.py
tests/cases/: __init__.py  crypto_tools.py  dev_tools.py  dl_tools.py  embedded_tools.py  text_tools.py
tests/e2e/: test_web.py
tk_tools/: __init__.py  ai_tools.py  archive_tools.py  audiopro_tools.py  bundle_tools.py  code_tools.py  completions_tools.py  convert_tools.py  crypto_tools.py  cryptopro_tools.py  data_tools.py  db_tools.py  dev_tools.py  dl_tools.py  doc_tools.py  embedded_tools.py  finance_tools.py  forensic_tools.py  fs_tools.py  gen_tools.py  geo_tools.py  image_tools.py  imagepro_tools.py  media_tools.py  ml_tools.py  net_tools.py  netpro_tools.py  oled_tools.py  pdf_tools.py  pdfpro_tools.py  qr_tools.py  recipes_tools.py  steg_tools.py  text_tools.py  threed_tools.py  time_tools.py  videopro_tools.py  watch_tools.py
web/: app.js  assistant.css  assistant.js  index.html  manifest.json  pipeline.css  pipeline.js  pwa-register.js  style.css  sw.js
